--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
-							</div>
+								<h1>Circuit Studio<h1>
 						</div>
 						<nav>
 							<ul>
@@ -50,9 +47,18 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p> Throughout history technology has allowed humans to rise up and conquer the natural word,becoming the dominant species on the planet.Fire help humans cook meat and see at night and farming technology has allowed man to shead his nomadic ways.One of mans most important inventions is the circuit.The circuit has allowed humans to create the technology that we use in our everyday life,it has even allowed us to put a man on the moon. Here at circuit studio you will learn about circuit therory,op amps and other useful information about circuits.   
 								<div class="container">
-  								  <div class="jumbotron">
-								  <h1>circuits... has even allowed us to put a man on the moon</h1>
-								  </div>
+									<div class = "jumbotron">
+									<h1>circuits... has even allowed us to put a man on the moon</h1>
+									</div>
+								<div class="container">
+  								 <button type="button" class="btn btn-info" data-toggle="#dropdown">Simple collapsible</button>
+								<div id="dropdown" class="collapse">
+   								 Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    								 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    								 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  								</div>
+								</div>
+
 								</div>
 								<p> By the way, check out these <a href="#Videos">awesome videos</a>.</p>
 								
