fix an issue.final

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>based of a templet by <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p>based off a templet by <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
